--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,8 @@ flutter:
     - assets/Student.xlsx
     - assets/Staff.xlsx
     - assets/Admin.xlsx
+    - assets/logo.jpg
+    - assets/logo2.jpg
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
